--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.5.2
+cffi==1.15.1
+cryptography==39.0.0
 Django==4.1.3
 django-crispy-forms==1.14.0
 django-widget-tweaks==1.4.12
+oracledb==1.2.1
 Pillow==9.3.0
+pycparser==2.21
 sqlparse==0.4.3
 tzdata==2022.7
